[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rangebar"
# SSoT: Version is pulled from Cargo.toml by maturin (dynamic = ["version"])
dynamic = ["version"]
description = "Python bindings for rangebar: Non-lookahead range bar construction for cryptocurrency trading"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Terry Li" }
]
keywords = ["trading", "cryptocurrency", "range-bars", "backtesting", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=1.0",              # Parquet I/O for Tier 1 cache
    "pyarrow>=14.0",            # Required by polars for to_pandas() conversion
    "platformdirs>=4.0",        # Cross-platform cache directory
    "clickhouse-connect>=0.8",  # ClickHouse cache layer (Tier 2)
    "arro3-core>=0.6.5",
    "click>=8.0",               # CLI framework (#42)
    "requests>=2.28",           # Telegram notifications (#41)
    "loguru>=0.7.0",            # Structured NDJSON logging (#43)
    "tqdm>=4.66",               # Progress bars for long-running operations (#70)
]

[project.scripts]
rangebar = "rangebar.cli:main"

[project.optional-dependencies]
backtesting = ["backtesting>=0.3"]
exness = []  # Feature flag handled at Rust build level (maturin --features exness)
laguerre = ["atr-adaptive-laguerre>=2.4.1"]  # Issue #98+#99: 2.4.0=LaguerreFeatureProvider, 2.4.1=bars_in_regime fix
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.entry-points."rangebar.feature_providers"]
# Issue #98: FeatureProvider plugins register here via entry points.
# Example (from atr-adaptive-laguerre's pyproject.toml):
#   laguerre = "atr_adaptive_laguerre.rangebar_plugin:LaguerreFeatureProvider"

[project.urls]
Repository = "https://github.com/terrylica/rangebar-py"
Documentation = "https://github.com/terrylica/rangebar-py#readme"
"Upstream (Rust)" = "https://github.com/terrylica/rangebar"

[tool.maturin]
python-source = "python"
module-name = "rangebar._core"
# Include package data files (Issue #79: symbols.toml for symbol registry)
include = [{ path = "python/rangebar/data/**", format = "wheel" }]
# Include data-providers for full API (get_range_bars with automatic data fetching)
# This is now default in Cargo.toml, but explicit here for documentation
features = ["pyo3/extension-module", "data-providers"]
# Force optimized wheel profile (see Cargo.toml [profile.wheel])
profile = "wheel"
# Strip symbols to minimize wheel size
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
markers = [
    "benchmark: marks tests as performance benchmarks",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "bootstrap: marks tests as transitional bootstrap (archive after stable)",
    "contract: marks tests as alpha-forge contract tests (permanent)",
]

[tool.coverage.run]
source = ["python/rangebar"]
omit = ["tests/*", "python/rangebar/__init__.pyi"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
]
ignore = [
    # ANN101/ANN102 removed in ruff 0.9+
    "PLR0913",  # Too many arguments — legitimate for API functions mirroring Rust
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation
    "ANN202",  # Missing return type for private function
    "ANN401",  # Using Any type
    "ARG001",  # Unused function argument (pytest hooks require specific param names)
    "ARG002",  # Unused method argument (common in fixtures)
    "PLR2004", # Magic value in comparison
    "NPY002",  # Legacy numpy random
    "PD901",   # Generic variable name 'df'
    "F841",    # Unused variable (common in mock tests)
    "RET504",  # Unnecessary assignment before return
    "SIM117",  # Nested with statements
    "E501",    # Line too long (test output messages can be verbose)
    "B007",    # Loop control variable not used (common in iterrows)
    "PLC0415", # Lazy imports inside test functions (ClickHouse, PyO3, etc.)
    "PT011",   # pytest.raises too broad (test-internal ValueError matching)
    "PLW0108", # Lambda may be unnecessary (callback patterns in tests)
]
"examples/*" = [
    "PD901",   # Generic variable name 'df'
    "NPY002",  # Legacy numpy random
    "PLR2004", # Magic value
    "PLR0915", # Too many statements
    "TRY300",  # Consider moving to else block
    "B904",    # Within except clause, raise with from
    "E501",    # Line too long (examples can be verbose)
]
"python/rangebar/config.py" = [
    "PLC0415", # Lazy imports to avoid ClickHouse import-time checks
]
"python/rangebar/sidecar.py" = [
    "N802",    # do_GET required by BaseHTTPRequestHandler
    "PLC0415", # Lazy imports (avoid importing heavy deps at module level)
]
"python/rangebar/kintsugi.py" = [
    "PLC0415", # Lazy imports (avoid circular imports with clickhouse/recency)
]
"python/rangebar/__init__.pyi" = [
    "PYI021",  # Docstrings in stubs (kept for documentation)
    "PYI034",  # Self return type (intentional RangeBarCache return)
    "E501",    # Line too long (docstring examples)
    "E402",    # Module-level import not at top (organized by section)
]
"python/rangebar/__init__.py" = [
    "F821",    # Forward references for type hints
    "SIM108",  # Ternary operator (readability preference)
    "PLC0415", # Lazy imports for optional ClickHouse dependencies
    "PLR0912", # Too many branches (get_range_bars is comprehensive)
    "PLR0913", # Too many arguments (get_range_bars exposes full API)
    "PLR0915", # Too many statements (get_range_bars is entry point)
    "F401",    # Unused imports (polars used for type hints)
    "PD901",   # Generic variable name 'df'
    "TRY300",  # Consider moving to else block
    "E501",    # Line too long (docstring examples)
    "E402",    # Module-level import not at top (lazy imports after __all__)
]
"python/rangebar/processors/api.py" = [
    "PLC0415", # Lazy imports for optional ClickHouse/Polars dependencies
    "PD901",   # Generic variable name 'df'
]
"python/rangebar/orchestration/*.py" = [
    "PLC0415", # Lazy imports for optional ClickHouse/Polars/Exness dependencies
    "PLR0913", # Too many arguments (orchestration functions expose full API surface)
    "PLR0912", # Too many branches (complex orchestration logic)
    "PLR0915", # Too many statements (orchestration entry points)
    "PLR0911", # Too many return statements (complex control flow)
    "PD901",   # Generic variable name 'df'
    "ARG001",  # Unused function arguments (reserved for future use / API stability)
    "TRY300",  # Consider moving to else block
    "SIM108",  # Ternary operator (readability preference)
    "DTZ007",  # Naive datetime from strptime (intentional, dates are local)
    "DTZ001",  # Naive datetime constructor (intentional for month boundaries)
    "E501",    # Line too long (docstring examples, long comments)
    "ANN401",  # Any type in kwargs (deprecated shim compatibility)
]
"python/rangebar/clickhouse/*.py" = [
    "PD901",   # Generic variable name 'df' (common in data processing)
    "RET504",  # Unnecessary assignment before return
    "TRY300",  # Consider moving to else block
    "PLW2901", # Loop variable overwritten
    "ANN401",  # Any type in kwargs
    "PYI034",  # Self return type
    "PLR2004", # Magic values (port numbers, etc.)
    "PLR0912", # Too many branches (bulk storage handles many optional column groups)
    "PLR0913", # Too many arguments (cache API needs symbol, threshold, timestamps, etc.)
    "PLC0415", # Lazy imports for optional dependencies
    "TID252",  # Relative imports from parent (intentional for package structure)
]
"python/rangebar/exness.py" = [
    "PD901",   # Generic variable name 'df'
    "ANN401",  # Any type in kwargs
    "F821",    # Forward references (ExnessInstrument placeholders)
    "PLC0415", # Import in function (needed for optional imports)
    "RET504",  # Unnecessary assignment before return (readability preference)
]
"scripts/*" = [
    "E501",    # Line too long (scripts can be verbose)
    "PLR2004", # Magic values (common in scripts)
    "PLR0911", # Too many return statements (complex control flow in analysis)
    "PLR0912", # Too many branches (analysis scripts have complex control flow)
    "PLR0913", # Too many arguments (analysis scripts need full APIs)
    "PLR0915", # Too many statements (analysis scripts are comprehensive)
    "PD901",   # Generic variable name 'df' (common in data processing scripts)
    "PLC0415", # Lazy imports (scripts can import inside functions)
    "RET504",  # Unnecessary assignment before return (readability in scripts)
    "TRY300",  # Consider moving to else block
    "ANN001",  # Missing type annotation
    "ANN201",  # Missing return type annotation
    "ARG001",  # Unused function arguments (stubs for future use)
    "UP017",   # datetime.UTC alias (not available in all Python versions)
]
"python/rangebar/cli.py" = [
    "PLC0415", # Lazy imports (CLI only loads modules when needed)
    "TRY300",  # Consider moving to else block
    "PD901",   # Generic variable name 'df' (common in data processing)
]
"python/rangebar/checkpoint.py" = [
    "PLC0415", # Lazy imports (avoid circular imports)
    "PLR0912", # Too many branches (populate_cache_resumable is inherently complex)
    "PLR0913", # Too many arguments (resumable population API)
    "PLR0915", # Too many statements (populate_cache_resumable manages full workflow)
    "UP035",   # Import from collections.abc (typing.Iterator is fine)
    "PTH105",  # os.replace for atomic operations
    "PTH108",  # os.unlink for cleanup
    "SIM105",  # contextlib.suppress (explicit try-except is clearer)
    "TRY300",  # Consider moving to else block
    "PD901",   # Generic variable name 'df' (common in data processing)
]
"python/rangebar/hooks.py" = [
    "ANN401",  # Any type in kwargs (details are intentionally flexible)
    "UP035",   # Import from collections.abc (typing.Callable is fine for compatibility)
]
"python/rangebar/notify/*.py" = [
    "PLC0415", # Lazy imports (optional requests dependency)
    "TID252",  # Relative imports from parent (intentional for subpackage)
    "TRY300",  # Consider moving to else block
]
"python/rangebar/validation/post_storage.py" = [
    "PLC0415", # Lazy imports (avoid import-time overhead)
]
"python/rangebar/validation/__init__.py" = [
    "E501",    # Line too long (docstring)
]
"python/rangebar/logging.py" = [
    "PLC0415", # Lazy imports (loguru, socket, uuid for optional/deferred loading)
    "PLW0603", # Global statement for lazy logger initialization singleton
]
"python/rangebar/validation/tier2.py" = [
    "PLC0415", # Lazy imports (optional statsmodels/scipy/sklearn dependencies)
]
"python/rangebar/recency.py" = [
    "PLC0415", # Lazy imports (avoid circular imports with clickhouse/streaming)
    "PLR2004", # Magic values (gap thresholds, API limits)
    "ARG001",  # Unused arguments (verbose reserved for future use)
    "RET504",  # Unnecessary assignment before return (readability)
]
"python/rangebar/storage/parquet.py" = [
    "PLC0415", # Lazy imports (pyarrow inside generator for streaming)
    "ARG002",  # Unused method args (timestamp_col kept for API stability)
]
"python/rangebar/storage/parquet_io.py" = [
    "PLC0415", # Lazy imports (rangebar.exceptions inside validation)
    "PLR0911", # Too many return statements (parquet validation has many exit paths)
]
"python/rangebar/storage/parquet_query.py" = [
    "PLC0415", # Lazy imports (pyarrow.parquet inside streaming generator)
    "PLR0911", # Too many return statements (has_ticks has many early-exit checks)
    "PLR0912", # Too many branches (read_ticks_streaming handles many edge cases)
    "ARG001",  # Unused function args (timestamp_col kept for API stability)
]
"python/rangebar/compat/*.py" = [
    "PLC0415", # Lazy imports (avoid circular imports with _core)
    "ANN401",  # Any type (TOML data is untyped)
    "PLR2004", # Magic values (feature counts, range bounds)
    "PLW0603", # Global statement (lazy singleton pattern)
    "E501",    # Line too long (docstrings, long type annotations)
]
"python/rangebar/storage/checksum_registry.py" = [
    "PLR0913", # Too many arguments (create factory method needs all fields)
    "PLC0415", # Lazy imports (avoid circular import with notify)
    "TID252",  # Relative imports from parent (intentional for package structure)
]
"python/rangebar/ouroboros.py" = [
    "PLR2004", # Magic values (weekday numbers 5/6 for Saturday/Sunday, month 12)
    "PLC0415", # Lazy imports (zoneinfo for exchange session detection)
]
"python/rangebar/progress.py" = [
    "PLC0415", # Lazy imports (tqdm/loguru for optional progress tracking)
    "ANN401",  # Any type in kwargs (intentionally flexible for postfix/event details)
    "N812",    # tqdm as TqdmType (TYPE_CHECKING alias for type hints)
    "E501",    # Line too long (log format strings)
    "PYI034",  # Self return type (dataclass context manager)
]

[tool.semantic_release]
# SSoT: Cargo.toml is the single source of truth for version
# - workspace.package.version: Inherited by all workspace crates (via version.workspace = true)
# - package.version: The PyO3 extension crate (rangebar-py) version
# - pyproject.toml uses dynamic = ["version"] to pull from Cargo.toml at build time
version_toml = [
    "Cargo.toml:workspace.package.version",
    "Cargo.toml:package.version"
]
build_command = "pip install build && python -m build --sdist"
commit_parser = "conventional"
tag_format = "v{version}"
allow_zero_version = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[dependency-groups]
dev = [
    "persim>=0.3.8",
    "psutil>=7.2.1",
    "pytest-cov>=7.0.0",
    "ripser>=0.6.14",
    "river>=0.23.0",
    "scipy>=1.17.0",
    "typing-extensions>=4.15.0",
]
