[package]
name = "rangebar-core"
documentation = "https://docs.rs/rangebar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Core range bar construction algorithm with temporal integrity guarantees"
keywords = ["finance", "trading", "range-bars", "algorithm"]
categories = ["algorithms", "data-structures", "finance"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
csv = { workspace = true, optional = true }
ahash = "0.8"  # Fast, non-cryptographic hash for price window verification

# Optional dependencies for future phases
pyo3 = { version = "0.22", optional = true }
utoipa = { version = "5.4", optional = true }

# Arrow dependencies for streaming architecture (optional)
arrow = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
hurst = "0.1.0"

# SmallVec for allocation-efficient lookback trade tracking (Issue #96 Task #10)
smallvec = "1.13"

# libm for optimized math functions (Issue #96 Task #14 - Garman-Klass ln optimization)
libm = "0.2"

# rayon for parallelization of Tier 2/3 feature computation (Issue #115)
rayon = "1.10"

# parking_lot for optimized RwLock (Issue #96 Task #124 - lower latency than std::sync::RwLock)
parking_lot = "0.12"

[dev-dependencies]
csv.workspace = true  # Required for test_data_loader during test compilation

[features]
default = ["simd-burstiness"]  # Issue #96 Task #102: Enable SIMD burstiness by default for 2-4x speedup
test-utils = ["dep:csv"]  # Real data loading requires csv crate
python = ["pyo3"]  # Python bindings via PyO3 (future phase)
api = ["utoipa"]     # API schemas via utoipa (future phase)
arrow = ["dep:arrow", "dep:arrow-array", "dep:arrow-schema"]  # Arrow export for streaming architecture
simd-burstiness = []  # Issue #96 Task #102: SIMD-accelerated burstiness computation (2-4x speedup on Tier 2 features)
simd-permutation-entropy = []  # Task #93: SIMD-accelerated permutation entropy (3-6x speedup)

[[bench]]
name = "interbar_performance"
harness = false  # Disable test harness to run custom benchmark code

[lints]
workspace = true
