[package]
name = "rangebar-core"
documentation = "https://docs.rs/rangebar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Core range bar construction algorithm with temporal integrity guarantees"
keywords = ["finance", "trading", "range-bars", "algorithm"]
categories = ["algorithms", "data-structures", "finance"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
csv = { workspace = true, optional = true }
ahash = "0.8"  # Fast, non-cryptographic hash for price window verification

# Optional dependencies for future phases
pyo3 = { version = "0.22", optional = true }
utoipa = { version = "5.4", optional = true }

# Arrow dependencies for streaming architecture (optional)
arrow = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }

# rangebar-hurst: Internal MIT-licensed fork of evrom/hurst (GPL-3.0) for license compatibility
# Issue #96 Task #149/150: GPL-3.0 license conflict resolution
rangebar-hurst = { path = "../rangebar-hurst" }

# SmallVec for allocation-efficient lookback trade tracking (Issue #96 Task #10)
smallvec = "1.13"

# libm for optimized math functions (Issue #96 Task #14 - Garman-Klass ln optimization)
libm = "0.2"

# rayon for parallelization of Tier 2/3 feature computation (Issue #115)
rayon = "1.10"

# num_cpus for CPU-aware adaptive parallelization (Issue #96 Task #189)
num_cpus = "1.16"

# parking_lot for optimized RwLock (Issue #96 Task #124 - lower latency than std::sync::RwLock)
parking_lot = "0.12"

# quick_cache for high-performance LRU caching (Issue #96 Task #63 - 4-10x faster than moka)
# S3-FIFO eviction, lower overhead than moka's W-TinyLFU for throughput-critical caches
quick_cache = "0.6"

# once_cell for lazy static globals (Issue #145: Multi-Symbol Entropy Cache Sharing)
# Thread-safe, one-time initialization with no runtime cost after first access
once_cell = "1.20"

# wide for stable Rust SIMD support (Issue #96 Task #127 - burstiness SIMD acceleration)
# Provides portable SIMD without nightly requirement
wide = "0.7"

# mimalloc for high-performance memory allocation (Phase 9 Task #147)
# Expected 2-5x speedup on multithreaded workloads vs glibc malloc
# Survey: https://github.com/microsoft/mimalloc - production-proven at scale
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
csv.workspace = true  # Required for test_data_loader during test compilation
proptest = "1.6"  # Property-based testing for feature bounds invariants

[features]
default = ["simd-burstiness", "simd-kyle-lambda"]  # Issue #96 Task #102/148: Enable SIMD for 2-4x speedup
test-utils = ["dep:csv"]  # Real data loading requires csv crate
python = ["pyo3"]  # Python bindings via PyO3 (future phase)
api = ["utoipa"]     # API schemas via utoipa (future phase)
arrow = ["dep:arrow", "dep:arrow-array", "dep:arrow-schema"]  # Arrow export for streaming architecture
simd-burstiness = []  # Issue #96 Task #102: SIMD-accelerated burstiness computation (2-4x speedup on Tier 2 features)
simd-kyle-lambda = []  # Issue #96 Task #148 Phase 2: SIMD-accelerated Kyle Lambda computation (1.5-2.5x speedup)
simd-permutation-entropy = []  # Task #93: SIMD-accelerated permutation entropy (3-6x speedup)

[[bench]]
name = "interbar_performance"
harness = false  # Disable test harness to run custom benchmark code

[[bench]]
name = "tier2_profiling"
harness = false  # Disable test harness for custom profiling code (Phase 5A - Issue #96 Task #126)

[[bench]]
name = "burstiness_simd_detail"
harness = false  # Disable test harness for SIMD burstiness microbenchmark (Phase 5B - Issue #96 Task #127)

[[bench]]
name = "tier3_profiling"
harness = false  # Disable test harness for Tier 3 feature profiling (Phase 5B+ - Issue #96 Task #128)

[[bench]]
name = "entropy_simd_detail"
harness = false  # Disable test harness for entropy SIMD microbenchmark (Phase 5B+ - Issue #96 Task #129)

[[bench]]
name = "smallvec_profiling"
harness = false  # Disable test harness for SmallVec buffer sizing profiling (Issue #96 Task #136)

[[bench]]
name = "cumulative_performance_validation"
harness = false  # Disable test harness for comprehensive Phase 2-6 performance validation (Issue #96 Task #137)

[[bench]]
name = "production_validation"
harness = false  # Disable test harness for Phase 7 production validation with real Binance data (Issue #96 Task #138)

[[bench]]
name = "tier_breakdown_real_data"
harness = false  # Disable test harness for Tier-by-Tier breakdown on real data (Issue #96 Task #140)

[[bench]]
name = "epsilon_branch_prediction_benchmark"
harness = false  # Disable test harness for epsilon branch prediction optimization (Issue #96 Task #177)

[[bench]]
name = "conversion_caching_benchmark"
harness = false  # Disable test harness for conversion caching benchmark (Issue #96 Task #188)

[[bench]]
name = "dynamic_parallelization_benchmark"
harness = false  # Disable test harness for dynamic parallelization dispatch (Issue #96 Task #189)

[[bench]]
name = "kyle_lambda_branchless_benchmark"
harness = false  # Disable test harness for Kyle Lambda branchless optimization (Issue #96 Task #184)

[[bench]]
name = "entropy_cache_warmup_benchmark"
harness = false  # Disable test harness for entropy cache warm-up benchmark (Issue #96 Task #191)

[[bench]]
name = "lookahead_binary_search_benchmark"
harness = false  # Disable test harness for lookahead binary search benchmark (Issue #96 Task #167 Phase 2)

[[bench]]
name = "cumulative_optimization_validation"
harness = false  # Disable test harness for cumulative optimization validation (Issue #96 Tasks #187-191, #167)

[[bench]]
name = "hurst_dfa_memoization_benchmark"
harness = false  # Disable test harness for Hurst DFA memoization benchmark (Issue #96 Task #192)

[[bench]]
name = "intrabar_early_exit_benchmark"
harness = false  # Disable test harness for intra-bar early-exit optimization (Issue #96 Task #193)

[[bench]]
name = "ofi_ilp_optimization_benchmark"
harness = false  # Disable test harness for OFI branchless ILP optimization (Issue #96 Task #194)

[lints]
workspace = true
